# Artiatomi

./: CMakeLists.txt  Makefile  MakefileAndroid  MakefileDev05  README.md
src/: HelperFunctions.h  default.h
src/config/: Config.cpp  Config.h  ConfigExceptions.cpp  ConfigExceptions.h
src/emsart/: CTFModel.cpp  CTFModel.h  EmSart.cpp  EmSartDefault.h  EmSartRefine.cpp  EmSartRefineMembran.cpp  EmSartSubVolumes.cpp  HipKernelBinarys.h  Kernels.cpp  Kernels.h  NppEmulator.cpp  NppEmulator.h  Projection.cpp  Projection.h  Reconstructor.cpp  Reconstructor.h  Volume.cpp  Volume.h  default.h
src/emsart/cuda_kernels/: compileCudaKernels.sh
src/emsart/hip/: CudaGral.cpp  HipArrays.cpp  HipArrays.h  HipContext.cpp  HipContext.h  HipConvertionUtil.h  HipDefault.h  HipDeviceProperties.cpp  HipDeviceProperties.h  HipException.cpp  HipException.h  HipKernel.cpp  HipMissedStuff.cpp  HipMissedStuff.h  HipTextures.cpp  HipTextures.h  HipVariables.cpp  HipVariables.h  NppException.cpp  NppException.h
src/emsart/hip_kernels/: Compare.cpp  Compare.h  CopyToSquare.cpp  DeviceReconstructionParameters.h  NppEmulatorKernel.cpp  NppEmulatorKernel.h  compileHIPKernelsAMD.sh  compileHIPKernelsNVIDIA.sh  cutil.h  cutil_math.h  hip_defaults.h
src/emsart/io/: CtfFile.cpp  CtfFile.h  Dm4File.cpp  Dm4File.h  Dm4FileStack.cpp  Dm4FileStack.h  Dm4FileTag.cpp  Dm4FileTag.h  Dm4FileTagDirectory.cpp  Dm4FileTagDirectory.h  EMFile.cpp  EMFile.h  FileIOException.h  FileReader.cpp  FileReader.h  FileSource.h  FileWriter.cpp  FileWriter.h  IODefault.h  Image.cpp  Image.h  ImageConverterMethods.cpp  MPISource.cpp  MPISource.h  MRCFile.cpp  MRCFile.h  MarkerFile.cpp  MarkerFile.h  MotiveList.cpp  MotiveListe.h  ProjectionSource.h  ShiftFile.cpp  ShiftFile.h  emHeader.h  mrcHeader.h  writeBMP.cpp  writeBMP.h
src/emsart/utils/: Config.cpp  Config.h  ConfigExceptions.cpp  ConfigExceptions.h  Matrix.cpp  Matrix.h  SimpleLogger.cpp  SimpleLogger.h  UtilsDefault.h  log.cpp  log.h
src/hip/: HipArrays.cpp  HipArrays.h  HipBasicKernel.cpp  HipBasicKernel.h  HipContext.h  HipException.cpp  HipException.h  HipKernel.cpp  HipKernel.h  HipReducer.cpp  HipReducer.h  HipRot.cpp  HipRot.h  HipTextures.cpp  HipTextures.h  HipVariables.cpp  HipVariables.h  new_HipBasicKernel.cpp  new_HipBasicKernel.h  old_HipBasicKernel.cpp  old_HipBasicKernel.h
src/hip_kernels/: BackProjectionSquareOS.cpp  Constants.h  DeviceReconstructionParameters.h  DeviceVariables.h  ForwardProjectionRayMarcher_TL.cpp  ForwardProjectionSlicer.cpp  basicKernels.cpp  compileHIPKernelsAMD.sh  compileHIPKernelsNVIDIA.sh  ctf.cpp  kernel.cpp  kernels.cpp  wbpWeighting.cpp
src/io/: EMFile.cpp  EMFile.h  File.cpp  File.h  FileIOException.cpp  FileWriter.cpp  FileWriter.h  IODefault.h  Image.cpp  Image.h  MotiveListe.h  emHeader.h
src/subtomogramaverage/: AddParticles.cpp  AvgProcess.cpp  AvgProcess.h  Config.h  EMFile.h  Kernels.cpp  Kernels.h  MotiveList.cpp  MotiveListe.h  Speedtest.cpp  SubTomogramAverageMPI.cpp  SubTomogramAverageMPIBench.cpp
